--- a/static/chat.css
+++ b/static/chat.css
@@ -1,76 +1,67 @@
-body {
-  font-family: "Arial", sans-serif;
-  background-color: #f2f2f2;
-  margin: 0;
-  padding: 0;
+.chat-container {
+  display: flex;
+  height: 100vh;
 }
 
-.chat-container {
-  max-width: 600px;
-  margin: 20px auto;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
+p {
+  margin: 0;
+}
+
+.chat-list {
+  width: 25%;
+  border-right: 1px solid #ddd;
+  padding: 20px;
+}
+
+.chat-list a {
+  display: block;
+  padding: 10px;
+  border-bottom: 1px solid #eee;
+  text-decoration: none;
+  color: #333;
+}
+
+.chat-list a:hover {
+  background-color: #f2f2f2;
+}
+
+.chat-content {
+  flex: 1;
+  padding: 20px;
+  overflow-y: scroll;
 }
 
 .message {
-  padding: 10px;
-  margin: 0;
-  border-bottom: 1px solid #eee;
-}
-
-form {
-  max-width: 400px;
-  margin: 20px auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
-}
-
-label {
-  display: block;
-  margin-bottom: 10px;
-}
-
-input {
-  width: 100%;
-  padding: 10px;
+  max-width: 70%;
   margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-button {
-  padding: 10px 20px;
-  background-color: #3498db;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-#chatMessages {
-  max-height: 400px;
-  overflow-y: auto;
   padding: 10px;
+  border-radius: 10px;
 }
 
-#messageInput {
-  width: 80%;
+.message-text {
   padding: 10px;
-  margin-right: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 10px;
+  max-width: max-content;
 }
 
-button#sendMessageBtn {
-  padding: 10px 20px;
-  background-color: #2ecc71;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+.message-received {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.message-received > .message-text {
+  background-color: #f2f2f2;
+  text-align: left;
+}
+
+.message-sent {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.message-sent > .message-text {
+  background-color: #4caf50;
+  color: white;
+  text-align: right;
+  max-width: max-content;
 }
