--- a/view/index.html
+++ b/view/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./static/ghostbusters-png-logo-3616.png" type="image/png" />
+    <link rel="icon" href="./static/favicon.png" type="image/png" />
     <title>Gobusters</title>
     <link
       rel="stylesheet"
@@ -104,7 +104,7 @@
               <div
                 class="form-container form-right animate__animated animate__fadeInRight"
               >
-                <form>
+                <form id="signupForm">
                   <div class="form-group">
                     <label for="signupUsername">Usuario</label>
                     <input
