--- a/view/index.html
+++ b/view/index.html
@@ -76,7 +76,7 @@
               <div
                 class="form-container form-left animate__animated animate__fadeInLeft"
               >
-                <form>
+                <form id="loginForm">
                   <div class="form-group">
                     <label for="loginUsername">Usuario</label>
                     <input
