--- a/view/chat.html
+++ b/view/chat.html
@@ -7,8 +7,8 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <link rel="icon" href="./static/favicon.png" type="image/png" />
-    <link rel="stylesheet" href="./static/chat.css" />
+    <link rel="icon" href="./static/images/favicon.png" type="image/png" />
+    <link rel="stylesheet" href="./static/css/chat.css" />
     <title>Gobusters Chat</title>
     <style></style>
   </head>
@@ -50,6 +50,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="./static/chat.js"></script>
+    <script src="./static/js/chat.js"></script>
+    <script src="./static/js/socket.js"></script>
   </body>
 </html>
