--- a/view/index.html
+++ b/view/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./static/favicon.png" type="image/png" />
+    <link rel="icon" href="./static/images/favicon.png" type="image/png" />
     <title>Gobusters</title>
     <link
       rel="stylesheet"
@@ -137,6 +137,7 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="./static/index.js"></script>
+    <script src="./static/js/index.js"></script>
+    <script src="./static/js/socket.js"></script>
   </body>
 </html>
