--- a/view/chat.html
+++ b/view/chat.html
@@ -26,7 +26,9 @@
       <div class="chat-content">
         <!-- Mensajes recibidos -->
         <div class="message message-received">
+          <p class="username">Lucia</p>
           <p class="message-text">Hola, estoy bien. ¿Y tú?</p>
+          <p class="time">17:05</p>
         </div>
 
         <div class="message message-received">
@@ -36,6 +38,7 @@
         <!-- Mensajes enviados -->
         <div class="message message-sent">
           <p class="message-text">Hola, estoy bien. ¿Y tú?</p>
+          <p class="time">17:05</p>
         </div>
         <div class="message message-received">
           <p class="message-text">Hola, estoy bien. ¿Y tú?</p>
