--- a/view/chat.html
+++ b/view/chat.html
@@ -16,33 +16,10 @@
     <div class="container-fluid chat-container">
       <!-- Columna de chats -->
       <div class="chat-list">
-        <a href="#" class="active">Chat 1</a>
-        <a href="#">Chat 2</a>
-        <a href="#">Chat 3</a>
-        <!-- Agrega más chats según sea necesario -->
+        <a href="#" class="active">Chat global</a>
       </div>
-
-      <!-- Área de contenido del chat -->
       <div class="chat-content">
-        <!-- Mensajes recibidos -->
-        <div class="message message-received">
-          <p class="username">Lucia</p>
-          <p class="message-text">Hola, estoy bien. ¿Y tú?</p>
-          <p class="time">17:05</p>
-        </div>
-
-        <div class="message message-received">
-          <p class="message-text">Hola, estoy bien. ¿Y tú?</p>
-        </div>
-
-        <!-- Mensajes enviados -->
-        <div class="message message-sent">
-          <p class="message-text">Hola, estoy bien. ¿Y tú?</p>
-          <p class="time">17:05</p>
-        </div>
-        <div class="message message-received">
-          <p class="message-text">Hola, estoy bien. ¿Y tú?</p>
-        </div>
+        
 
         <div class="input-message ">
           <input type="text" class="form-control" id="input-message" />
