--- a/view/index.html
+++ b/view/index.html
@@ -50,6 +50,10 @@
         opacity: 0;
         transform: translateX(100%);
       }
+      #switchAction:hover {
+        font-weight: 600;
+        cursor: pointer;
+      }
 
       .btn-primary,
       .btn-secondary {
