--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -43,6 +43,7 @@ p {
   border-bottom-right-radius: 0;
   font-weight: 600;
   border-bottom: 1px solid #bfb9b9;
+  cursor: pointer;
 }
 
 .message {
