--- a/view/chat.html
+++ b/view/chat.html
@@ -22,7 +22,7 @@
         
 
         <div class="input-message ">
-          <input type="text" class="form-control" id="input-message" />
+          <input type="text" class="form-control" id="input-message" placeholder="Escriba un mensaje" />
         </div>
       </div>
     </div>
