--- a/view/index.html
+++ b/view/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./static/images/favicon.png" type="image/png" />
+    
     <title>Gobusters</title>
     <link
       rel="stylesheet"
@@ -72,7 +73,7 @@
             <div class="card-header">
               <h4 class="title" id="titleAction">Gobusters</h4>
               <a id="switchMessage">
-                <span id="switchAction">Inicia sesión</span>
+                <span id="switchAction">¿Ya tenes cuenta? Inicia sesión</span>
               </a>
             </div>
 
@@ -87,7 +88,7 @@
                       type="text"
                       class="form-control"
                       id="loginUsername"
-                      placeholder="Enter username"
+                      placeholder="Ingrese un nombre de usuario"
                     />
                   </div>
                   <div class="form-group">
@@ -96,7 +97,7 @@
                       type="password"
                       class="form-control"
                       id="loginPassword"
-                      placeholder="Enter password"
+                      placeholder="Ingrese una contraseña"
                     />
                   </div>
                   <button type="submit" class="btn btn-primary">
@@ -115,7 +116,7 @@
                       type="text"
                       class="form-control"
                       id="signupUsername"
-                      placeholder="Choose a username"
+                      placeholder="Ingrese un nombre de usuario"
                     />
                   </div>
                   <div class="form-group">
@@ -124,7 +125,7 @@
                       type="password"
                       class="form-control"
                       id="signupPassword"
-                      placeholder="Choose a password"
+                      placeholder="Ingrese una contraseña"
                     />
                   </div>
                   <button type="submit" class="btn btn-secondary">
