--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -1,6 +1,7 @@
 .chat-container {
   display: flex;
   height: 100vh;
+  background-color: #282828;
 }
 
 p {
@@ -19,10 +20,16 @@ p {
   border-bottom: 1px solid #eee;
   text-decoration: none;
   color: #333;
+  background-color: #f2f2f2;
 }
 
 .chat-list a:hover {
-  background-color: #f2f2f2;
+  background-color: #a1a1a162;
+  color: white;
+}
+
+.time { 
+ color: white;
 }
 
 .chat-content {
@@ -44,6 +51,8 @@ p {
   font-weight: 600;
   border-bottom: 1px solid #bfb9b9;
   cursor: pointer;
+  font-size: 20px;
+  text-transform: uppercase;
 }
 
 .message {
@@ -57,6 +66,7 @@ p {
   border-radius: 10px;
   max-width: 500px;
   word-wrap: break-word;
+  font-size: 22px;
 }
 
 .message-received {
